# mcp-it

./: .gitignore  MANIFEST.in  README.md  example.py  example_proxy.py  pyproject.toml  requirements.txt
mcpit/: __init__.py  constants.py  main.py
